	PR c++/8171

gcc/cp/
	* typeck.c (build_binary_op): Add conversion of pointers to function
	members appearing as operands to the equality operators.

	gcc/testsuite/
	* g++.dg/conversion/ptrmem9.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130554 138bc75d-0d04-0410-961f-82ee72b054a4